make alarm service

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -46,10 +46,10 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
+                <category android:name="com.example.duchv.myapplication" />
             </intent-filter>
         </receiver>
-        <service android:name="background.GcmIntentService" />
+        <service android:name=".background.GcmIntentService" />
 
     </application>
     <uses-sdk android:minSdkVersion="11"/>
